# your-age

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html  shell.nix  todo.md
.github/workflows/: pages.yml
elm/src/: Main.elm
src/: input.rs  main.rs  output.rs  separators.rs  share.rs  state.rs  your_age.rs
