[package]
name = "your-age"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
gloo-console = "0.2.3"
gloo-timers = "0.2.4"
gloo-utils = "0.1.5"
url = "2.3.1"
wasm-bindgen = "0.2.82"
web-sys = "0.3.59"
yew = "0.19.3"
