[package]
name = "your-age"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
gloo-console = "0.2.3"
gloo-timers = "0.2.4"
gloo-utils = "0.1.5"
url = "2.3.1"
urlencoding = "2.1.2"
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = [] }
yew = "0.19.3"
